--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://NikitaNagare01.github.io/NewsMonkey",
+  "homepage" : "https://NikitaNagare01.github.io/NewsMonkey/",
   "name": "newsapp",
   "version": "0.1.0",
   "private": false,
